2019-11-07  Peter Bergner <bergner@linux.ibm.com>

	PR other/92090
	* gcc.target/powerpc/pr92090.c: New test.

2019-11-07  Feng Xue  <fxue@os.amperecomputing.com>

	PR tree-optimization/89134
	* gcc.dg/tree-ssa/loop-cond-split-1.c: New test.
	* g++.dg/tree-ssa/loop-cond-split-1.C: New test.
	* gcc.dg/torture/pr55107.c: Add -fno-split-loops.

2019-11-07  Andreas Krebbel  <krebbel@linux.ibm.com>

	* gcc.target/s390/addsub-signed-overflow-1.c: Expect lochi
	instructions to be used.
	* gcc.target/s390/addsub-signed-overflow-2.c: Likewise.
	* gcc.target/s390/mul-signed-overflow-1.c: Likewise.
	* gcc.target/s390/mul-signed-overflow-2.c: Likewise.
	* gcc.target/s390/vector/vec-scalar-cmp-1.c: Check for 32 and 64
	bit variant of lochi.  Swap the values for the lochi's.
	* gcc.target/s390/zvector/vec-cmp-1.c: Likewise.

2019-11-07  Martin Jambor  <mjambor@suse.cz>

	PR lto/70929
	* g++.dg/lto/pr70929_[01].C: New test.
	* gcc.dg/winline-10.c: Adjust for the fact that inlining happens.

2019-11-07  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/arm/acle/simd32.c: Update test.

2019-11-07  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/arm/acle/simd32.c: Update test.

2019-11-07  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/arm/acle/simd32.c: Update test.
	* gcc.target/arm/acle/simd32_sel.c: New test.

2019-11-07  Kyrylo Tkachov <kyrylo.tkachov@arm.com>

	* gcc.target/arm/acle/dsp_arith.c: Update test.

2019-11-07  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/arm/acle/dsp_arith.c: New test.

2019-11-07  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/arm/acle/saturation.c: New test.
	* gcc.target/arm/acle/sat_no_smlatb.c: Likewise.
	* lib/target-supports.exp (check_effective_target_arm_qbit_ok_nocache):
	Define..
	(check_effective_target_arm_qbit_ok): Likewise.
	(add_options_for_arm_qbit): Likewise.

2019-11-07  Martin Liska  <mliska@suse.cz>

	PR c++/92354
	* g++.target/i386/pr92354.C: New test.
